feat: Add new EJS views for displaying and editing welder qualification certificates, supporting both unified and legacy attribute data structures.

--- a/views/EditCertificate.ejs
+++ b/views/EditCertificate.ejs
@@ -203,9 +203,22 @@
       </thead>
       </tbody>
       <tbody style="text-align: center" id="dynamic-tbody">
-        <% const hasWelderProcess=record.attributes && record.attributes.length> 0 && record.attributes.some(a => a.key
-          === "Welder Process(es)");
-          if (hasWelderProcess) {
+        <% 
+          var isNewFormat = false;
+          if (record.attributes && record.attributes.length > 0) {
+            var standardKeys = [
+              "Welder Process(es)", "Types of Welder (manual/semi auto)", "Backing (With/without)",
+              "Types of weld", "Product Types(Plate or Pipe)", "Diameter of Pipe",
+              "Base Metal P Number to P Number", "Filler Metal or electrode specification",
+              "Filler Metal F-Number(S)", "Filler Metal addition/Deletion (GTAW/PAW)",
+              "Consumable Insert (GTAW or PAW)", "Deposit thickness for each process",
+              "Welding position", "Vertical Progression", "Type of Fuel Gas(OFW)",
+              "Insert gas backing(GTAW,PAW,GMAW)", "Transfer Mode (Spray, Globular, Short)",
+              "Current Type/Polarity(AC,DCEP,DCEN)"
+            ];
+            isNewFormat = record.attributes.some(function(a) { return standardKeys.indexOf(a.key) > -1; });
+          }
+          if (isNewFormat) {
           %>
           <% /* NEW UNIFIED FORMAT: All rows in attributes array */ %>
             <% record.attributes.forEach(function(attr) { %>
